--- a/YourPeopleBE/YourPeopleBE/src/main/resources/application.properties
+++ b/YourPeopleBE/YourPeopleBE/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.platform=mysql
+#Ime
+spring.datasource.url=jdbc:mysql://localhost:3306/myPeople
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto= create
+#Create, Create-Drop, Update and None
 
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+
+#Disables the Display of SQL commands in the Console.
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.show-sql=false
+
+elasticsearch.host=localhost
+elasticsearch.port=9200
+
+files.path = .\\src\\main\\resources\\files\\
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+
+#Displays SQL commands in the Console, not needed.
+#logging.level.org.hibernate.SQL=debug
